[package]
name = "okspiel"
version = "0.1.0"
authors = ["spieljs <spieljs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures= "0.3"
tokio = { version = "1.0", features = ["macros", "fs"] }
iced = {version = "0.2", features = ["tokio", "glow", "glow_qr_code"]}
sled = "0.34"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
reqwest= {version = "0.11", features = ["json"]}
dirs= "3.0"