[package]
name = "okspiel"
version = "0.1.0"
authors = ["spielcrypto <spielcrypto@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Desktop application to handle remotely multiple Okcash full node wallets"
homepage = "https://github.com/dancespiele/okspiel"
readme = "README.md"
repository = "https://github.com/dancespiele/okspiel"
categories = ["cryptography::cryptocurrencies", "gui", "asynchronous"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "z"

[dependencies]
tokio = { version = "1.2", features = ["full"] }
iced = {git = "https://github.com/hecrj/iced.git", features = ["tokio", "glow", "glow_qr_code"], branch = "master"}
sled = "0.34"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
reqwest= {version = "0.11", features = ["json"]}
dirs= "3.0"
copypasta= "0.7"
futures= "0.3"
dotenv = "0.15"